syntax = "proto3";
package contracts.humanresources;
option csharp_namespace = "gRPC.Contracts.HumanResources";
import "Protos/Shared/shared.proto";
import "google/protobuf/timestamp.proto";

service EmployeeContract {
	rpc GetEmployeeForDisplay(contracts.shared.ItemRequest) returns (grpc_EmployeeForDisplay);
    rpc GetEmployeeForEdit(contracts.shared.ItemRequest) returns (grpc_EmployeeGenericCommand);
    rpc GetEmployeesSearchByName(contracts.shared.grpc_StringSearchCriteria) returns (grpc_EmployeeListItems);
    rpc Create(grpc_EmployeeGenericCommand) returns (contracts.shared.CreateResponse);
    rpc Update(grpc_EmployeeGenericCommand) returns (contracts.shared.GenericResponse);
    rpc Delete(contracts.shared.ItemRequest) returns (contracts.shared.GenericResponse);
}

message grpc_EmployeeGenericCommand {
    int32 business_entity_id = 1;
    int32 name_style = 2;
    string title = 3;
    string first_name = 4;
    string middle_name = 5;
    string last_name = 6;
    string suffix = 7;
    string job_title = 8;
    string phone_number = 9;
    string phone_number_type = 10;
    string email_address = 11;
    int32 email_promotion = 12;
    string national_id_number = 13;
    string login_id = 14;
    string address_line1 = 15;
    string address_line2 = 16;
    string city = 17;
    int32 state_province_id = 18;
    string postal_code = 19;
    string country_region_code = 20;
    google.protobuf.Timestamp birth_date = 21;
    string marital_status = 22;
    string gender = 23;
    google.protobuf.Timestamp hire_date = 24;
    bool salaried = 25;
    int32 vacation_hours = 26;
    int32 sick_leave_hours = 27;
    int32 pay_frequency = 28;
    double pay_rate = 29;
    bool active = 30;
    int32 manager_id = 31;
    int32 department_id = 32;
    int32 shift_id = 33;   
}

message grpc_EmployeeForDisplay {
    int32 business_entity_id = 1;
    string name_style = 2;
    string title = 3;
    string first_name = 4;
    string middle_name = 5;
    string last_name = 6;
    string suffix = 7;
    string job_title = 8;
    string phone_number = 9;
    string phone_number_type = 10;
    string email_address = 11;
    int32 email_promotion = 12;
    string national_id_number = 13;
    string login_id = 14;
    string address_line1 = 15;
    string address_line2 = 16;
    string city = 17;
    string state_province_name = 18;
    string postal_code = 19;
    string country_region_name = 20;
    google.protobuf.Timestamp birth_date = 21;
    string marital_status = 22;
    string gender = 23;
    google.protobuf.Timestamp hire_date = 24;
    bool salaried = 25;
    int32 vacation_hours = 26;
    int32 sick_leave_hours = 27;
    string pay_frequency = 28;
    double pay_rate = 29;
    bool active = 30;
    string manager_full_name = 31;
    string department_name = 32;   
    string shift_name = 33;
}

message grpc_EmployeeListItem {
    int32 businessEntityId = 1;
    string lastName = 2;
    string firstName = 3;
    string middleName = 4;    
    string jobTitle = 5;
    string department = 6;
    string phoneNumber = 7;
    string emailAddress = 8;
    bool active = 9;
    string fullName = 10;
    int32 managerId = 11;
    int32 employeesManaged = 12;
    string managerName = 13;       
}

message grpc_EmployeeListItems {
    repeated grpc_EmployeeListItem grpc_employees = 1; 
    map<string, int32> grpc_meta_data = 2;
}